--- a/index.html
+++ b/index.html
@@ -1,24 +1,10 @@
 <html>
 <head>
-<title>杜甫的诗——春夜喜雨</title>
-</head>
-<body background=http://i0.hdslb.com/bfs/article/c98c130e11e653abc3c26c995cbf3fed7b840e89.png>
-<embed src="https://webfs.yun.kugou.com/202003132227/0e80223a9ea176e7aa6b8010551bff5f/G203/M09/0A/11/q5QEAF5U8ieABDBNAEcDw-MJrkI483.mp3" 
-
- width="0" height="0" loop=“-1” autostart="True"></embed>
-<p align="center">
-<b>春&nbsp;夜&nbsp;喜&nbsp;雨</b ><br/>
-(唐)杜甫</p>
-<hr width="80%" color="red"/>
-<p align="center">
-好雨知时节，当春乃发生。<br/>
-随风潜入夜，润物细无声。<br/>
-野径云俱黑，江船火独明。<br/>
-晓看红湿处，花重锦官城。</p>
-<p>【译文】春雨知道适应季节，当万物萌发生长时，它伴随着春风，在夜晚
-偷偷地及时降临，滋润万物又细微无声。郊野的小路和空中的云朵躲在黑暗之中，
-江上渔船的灯火却格外明亮。待到天明，看那细雨湿润的红花，映着曙光分外鲜艳，
-饱含雨露的花朵开满了锦官城。</p>
+<title>我的HTML实验</title>
+<body>
+<h1 align="center">道德经</h1>
+<p align="center">道可道，非常道；名可名，非常名。</p>
+<p align="center">无名，天地之始，有名，万物之母。</p>
+<p align="center">故常无欲，以观其妙，常有欲，以观其徼。</p>
+<p align="center">此两者，同出而异名，同谓之玄，玄之又玄，众妙之门。</p>
 </body>
-</html>
-
