--- a/index.htm
+++ b/index.htm
@@ -14,7 +14,7 @@
 
 <ul>
 <li> <a href="index.htm">本站首页</a></li>
-<li><a href="html/santaisan.html" target="_blank">三台山公园</a></li>
+<li><a href="html/三台山.html" target="_blank">三台山公园</a></li>
 <li><a href="#">项王故里</a></li>
 <li><a href="#">骆马湖</a></li>
 <li><a href="#">龙王庙行宫</a></li>
